artifactory-rproxy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactory-rproxy
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    name: artifactory-rproxy
  ports:
  - name: http-alt
    port: 8080
    targetPort: http-alt
