artifactory-rproxy.route.yaml
apiVersion: v1
kind: Route
metadata:
  name: artifactory-rproxy
  namespace: REPLACE_WITH_NAMESPACE
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  host: REPLACE_WITH_PROXY_HOSTNAME
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: artifactory-rproxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
